trunk/Archive2/b8/67cfe840a27eb9/output
main.cpp:11:26: error: implicit instantiation of template 'B<1>' within its own definition
    static const int a = B<1>::a; //Error, implicit instantiation of template 'B<1>' within its own definition
                         ^
1 error generated.
